--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -21,9 +21,9 @@ The 112 dB in \autoref{eq:speaker_sensitivty} is added to the sensitivity since 
 
 \subsubsection*{Diaphragm excursion}
 
-When the speaker play music it does so by moving the diaphragm in the driver. This difference in air pressure is then perceived as music. The sound have a specific wavelength according to the frequency. This means that trying to move the air with a speaker cone is only efficient in different frequency area according to the diameter. If a speaker with a small diameter tries to generate a large wavelength the sound would bend and escape around the edges. Hence we need different sizes of speaker cones which is sized according to what area the are going to play.
+When the speaker play music it does so by moving the diaphragm in the driver. This difference in air pressure is then perceived as music. The sound have a specific wavelength according to the frequency. This means that trying to move the air with a speaker cone is more efficient in specific frequency area according to the diameter. If a speaker with a small diameter tries to generate a large wavelength the sound would bend and escape around the edges. Since a large wavelength require more air being pushed. Hence we need different sizes of speaker cones which is sized according to what area the are going to play.
 
-Next, the driver needs to deliver a sufficient \gls{SPL}. This creates the need for a enough  
+Next, the driver needs to deliver a sufficient \gls{SPL}. This creates the need for a enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the suspension, see \autoref{fig:regularspeaker}, and the spyder. The spyder holds is a membrane holding the voice coil more tightly in place. When the diaphragm moves it will have physical limits from the mechanical construction. At most, the diaphragm will move regular and linear. When pushed to the boundaries the limits of the mechanical construction will intervene and create non-linearities and distortion. This is discussed further in \autoref{subsec:impulses}.
 
 
 \subsection{Distortion from vibration and impulses}\label{subsec:impulses}
