--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -7,7 +7,8 @@ This chapter will analyze an active speaker, analyze how a human percieves sound
 \begin{figure}[H]
 \centering
 \tikzsetnextfilename{SpeakerBlock}
-\input{figures/SpeakerBlock.tex}
+\scalebox{0.9}{
+\input{figures/SpeakerBlock.tex}}
 \caption{Block diagram of an active speaker.}
 \label{fig:speaker_block}
 \end{figure}
