--- a/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
+++ b/Rapport/1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex
@@ -1,7 +1,5 @@
-\section{Equalization}\label{sec:tech_equalizer}
+\section{Graphic and parametric equalizer}\label{sec:tech_equalizer}
 As previously mentioned a equalizer for the system is needed. This section will therefore cover the design possibilities of an equalizer. It has been stated that the perception of sound is non-linear. Equalization of the audio signal can help  of the different frequencies in order to hear the lower sound just as much as the midrange and high frequency spectrum. By implementing an equalizer it is possible to manipulate different areas of the frequency.
-
-\subsection{Graphic and parametric equalizer}
 
 Generally speaking, there are two common types of equalizer designs used in audio. The first type of equalizer is the graphic equalizer. The graphic equalizer consist of multiple bandpass filters each with a fixed center frequency as seen in \autoref{fig:graphic_eq}. The amount of bandpass filters can vary, but can commonly be seen with 10 bands or more. A high amount of bands gives greater flexibility to adjust the frequency response of the equalizer.
 
