--- a/Rapport/figures/Concept.tex
+++ b/Rapport/figures/Concept.tex
@@ -3,13 +3,14 @@
 \node [block, fill=white] (AudioSource) at (0,0) {Audio Source};
 
 %% DSP %%
-\node [block, fill=white] (Equalizer) at ($(AudioSource)+(5,0)$) {Filtering or limitation};
-\node [Twolineblock, fill=white] (Decisionblock) at ($(Equalizer)+(-1,-2)$) {Decision block};
+\node [block, fill=white] (Equalizer1) at ($(AudioSource)+(3.5,0)$) {Equalizer};
+\node [block, fill=white] (Equalizer) at ($(Equalizer1)+(4,0)$) {Filtering or limitation};
+\node [Twolineblock, fill=white] (Decisionblock) at ($(Equalizer)+(-0.75,-2)$) {Decision block};
 \node [Twolineblock, fill=white] (SpectralAnalysis) at ($(Decisionblock)+(3.5,0)$) {Signal analysis};
 
 
 %% External %%
-\node [block, fill=white] (UserInterface) at ($(Equalizer)+(-2,2)$) {User interface};
+\node [block, fill=white] (UserInterface) at ($(Equalizer1)+(-2,2)$) {User interface};
 
 %% Speaker Enclosure %%
 \node [Twolineblock, fill=black!80,text=white] (Amplifier) at ($(SpectralAnalysis)+(4,+2)$) {Amplification stage};
@@ -22,7 +23,7 @@
 
 %% Store Blokke %%
 \begin{pgfonlayer}{bg}
-\draw[thick, fill=black!20] ($(-2.50,1)+(Equalizer)$) -- ($(2.5+1.750,1)+(Equalizer)$) -- ($(1.75,-1.25)+(SpectralAnalysis)$) -- ($(-1.53,-1.25)+(Decisionblock)$) -- ($(-2.50,1)+(Equalizer)$);
+\draw[thick, fill=black!20] ($(-1.75,1)+(Equalizer1)$) -- ($(2.8+1.750,1)+(Equalizer)$) -- ($(1.75,-1.25)+(SpectralAnalysis)$) -- ($(-5.05,-1.25)+(Decisionblock)$) -- ($(-1.75,1)+(Equalizer1)$);
 \node (DSPtag) at ($(0.5,-1)+(SpectralAnalysis)$) {\textbf{Processor}};
 
 \draw[thick, fill=black!20] ($(-1.50,1)+(Amplifier)$) -- ($(1.750,1)+(Driver)$) -- ($(1.750,-3.25)+(Driver)$) -- ($(-1.50,-1.25)+(SensorDriver)$) -- ($(-1.50,1)+(Amplifier)$);
@@ -30,11 +31,12 @@
 \end{pgfonlayer}
 
 %% Forbindelse %%
-\draw[->] (AudioSource) -- (Equalizer);
+\draw[->] (AudioSource) -- (Equalizer1);
+\draw[->] (Equalizer1) -- (Equalizer);
 \draw[->] (Equalizer) -- (Amplifier);
 \draw[->] (Amplifier) -- (Driver);
 
-\draw[->] (UserInterface) -| ($(Equalizer)+(-.25,.6)$);
+\draw[->] (UserInterface) -| ($(Equalizer1)+(-.25,.6)$);
 
 \draw[->] ($(SensorDriver)+(-1.375,-0.3)$) -- ($(SpectralAnalysis)+(1.375,-0.3)$);
 
