skrevet til forsøg bilag

--- a/Rapport/00setup/Tikz.tex
+++ b/Rapport/00setup/Tikz.tex
@@ -39,3 +39,4 @@
 \tikzstyle{LegendBox} = [rectangle,draw, minimum height=7mm, minimum width=20mm]
 \tikzstyle{Sysbox} = [draw,rounded corners, minimum height=15mm, minimum width=9em, align=center, text centered,text width = 10.5em]
 \tikzstyle{SysBlackBox} = [draw, fill=black, text=white, rounded corners, minimum height=15mm, minimum width=9em, align=center, text centered,text width = 10em]
+\tikzstyle{PreAmpBox} = [rectangle,draw, fill=black!20, minimum height=8mm, minimum width=12mm]
