--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -3,7 +3,9 @@
 
 \input{2Appendix/SpeakerTEST}
 
+\input{2Appendix/SpeakerTESTOneFrequency}
 
+\input{2Appendix/SpeakerTESTImpulse}
 
 
 %% Et afsnit %%
