--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -55,7 +55,7 @@ The concept for a solution is seen on \autoref{fig:Concept}. It shows a feedback
 \caption{Block diagram of the concept.}
 \label{fig:Concept}
 \end{figure}
-
+\todo[inline]{Fiks billede}
 The concept consist of a filtering or limitation block, which will be analyzed to understand which solution is best for the problem stated, a sensor which will be analyzed to determine which sensor should be used and where it should be placed, a signal analysis block and decision block which will not be analysed furhter in this chapter, a user interface which will be analyzed to determine how the user interface should be designed and lastly the processor block which will be analyzed to detemine which type of processor that should be used. 
 
 \input{1Chapters/1Preanalysis/TechnicalAnalysis_Equalizer.tex}
