--- a/Rapport/2Appendix/SpeakerTESTImpulse.tex
+++ b/Rapport/2Appendix/SpeakerTESTImpulse.tex
@@ -56,8 +56,8 @@ IEC 60268-5 standard.
 \ra{1.3}
 \begin{tabular}{S[table-format=1]ccc} \toprule
     {Item} & {Description} & {AAU-no} \\ \bottomrule 
-    1      &  B \& K Accelerometer Type 4344  & 64659   \\ 
-    2      &  B \& K Accelerometer Type 4344  & 64660   \\ 
+    1      &  B \& K Accelerometer Type 4319  & 06598   \\ 
+    2      &  B \& K Accelerometer Type 4333  & 06596   \\ 
     3      &  B \& K 2-channel Accelerometer Pre-amp Type 2622  & 07013   \\
     4      &  B \& K Microphone Type 4165  & 08132   \\
     5      &  Gras - 26AK Pre-amp & 52665   \\
@@ -65,7 +65,7 @@ IEC 60268-5 standard.
     7      &  Crown Studio Reference I Amplifier & 52614   \\
     8      &  BEHRINGER digital A/D \& D/A Converter - Model ADA8000   & 56545   \\
     9      &  B \& K Accelerometer calibrator 4294 & 08023   \\
-    10     &  B \& K Microphone calibrator 4294 & 78301   \\
+    10     &  B \& K Microphone calibrator 4231 & 78301   \\
     11     &  RME HammerFall DIGI 96-PDST sound card & 60919  \\
     12     &  TBD Power Supply & TBD  \\
     13     &  ADXL335 Accelerometer (Sparkfun Breakout) & NaN  \\
@@ -76,8 +76,7 @@ IEC 60268-5 standard.
 \end{table}
 
 
-
-\section{Procedure}\label{sec:SpeakerTestProcedure}
+\section{Procedure}\label{sec:SpeakerTestProcedure3}
 
 The producer for this experiment is described as follows:
 \begin{enumerate}
