--- a/Rapport/1Chapters/1Preanalysis/Speaker.tex
+++ b/Rapport/1Chapters/1Preanalysis/Speaker.tex
@@ -25,6 +25,16 @@ When the speaker play music it does so by moving the diaphragm in the driver. Th
 
 Next, the driver needs to deliver a sufficient \gls{SPL}. This creates the need for a enough excursion of the diaphragm. Without dwelling to much on the speaker construction, the diaphragm is suspended in free air hold in place by the suspension, see \autoref{fig:regularspeaker}, and the spyder. The spyder holds is a membrane holding the voice coil more tightly in place. When the diaphragm moves it will have physical limits from the mechanical construction. At most, the diaphragm will move regular and linear. When pushed to the boundaries the limits of the mechanical construction will intervene and create non-linearities and distortion. This is discussed further in \autoref{subsec:impulses}.
 
+\begin{figure}
+\centering
+\includegraphics[width=0.75\textwidth]{Speaker-cross-section}
+\caption{Cross section of a woofer}
+\label{fig:louderspeakerCrossSection}
+\end{figure}
+
+
+
+
 
 \subsection{Distortion from vibration and impulses}\label{subsec:impulses}
 
