--- a/Rapport/00setup/preamble.tex
+++ b/Rapport/00setup/preamble.tex
@@ -376,6 +376,12 @@
 \newcommand{\todohusk}[1]{\todo[color=red, author=HUSK:]{#1}}
 
 
+\makeatletter
+\renewcommand{\todo}[2][]{\tikzexternaldisable\@todo[#1]{#2}\tikzexternalenable}
+\renewcommand{\missingfigure}[2][]{\tikzexternaldisable\@missingfigure[#1]{#2}\tikzexternalenable}
+\makeatother
+
+
 
 
 
@@ -385,4 +391,8 @@
 \newcommand{\ra}[1]{\renewcommand{\arraystretch}{#1}}
 \usepackage{array}
 \usepackage{ragged2e}
+
+
+
+
 
