--- a/Rapport/1Chapters/2Requirements/Overview.tex
+++ b/Rapport/1Chapters/2Requirements/Overview.tex
@@ -1,4 +1,5 @@
-\chapter{Overview}
+\chapter{Overview} \label{ch:overview}
+This chapter will describe a of the sytem before the requirements of the system is set up. A overview of the system can be seen on \autoref{fig:SystemOverview} which shows a feedback system which regulates \textbf{TBD} the volume of the sub bass based on the \textbf{TBD} model, seen on \textbf{figure TBD}, of the second and third harmonic relative to keynote. Besides the feedback system a user controlled equalizer should also be part of the system to give the user more flexibility.            
 
 \begin{figure}[H]
 \centering
@@ -8,3 +9,39 @@
 \caption{Overview of the system}
 \label{fig:SystemOverview}
 \end{figure}
+
+A more detailed description of every block will now follow.
+
+\textbf{Audio source} \\
+The audio source will in this project be an analog line input. 
+
+\textbf{User} \\
+The user of the system will both be an commercial user and a developer as described in \autoref{sec:user_interface}. 
+
+\textbf{User controlled equalizer}\\
+The user controlled equalizer will be an equalizer which can be controlled by different users for different purposes.
+
+\textbf{User interface} \\
+The interface is t 
+
+\textbf{Sensor} \\
+The sensor is the accelerometer located on the driver as described in \autoref{sec:Sensor}, which measures the vibration of the driver to give the signal analysis block data to analyze. 
+
+\textbf{Signal analysis} \\
+The signal analysis block is the part of the system which makes the signal analysis, this could for example be a FFT or anything else dependent on what is nescesarry for the decision block.
+
+\textbf{Decision block} \\
+The decision block decides how the regulating equalizer should regulate the input signal based on the input from the signal analysis block. 
+
+\textbf{Regulating equalizer} \\
+The regulating equalizer 
+
+\textbf{Limiter} \\
+The limiter
+
+\textbf{Amplification stage} \\
+The amplification stage
+
+\textbf{Speaker driver} \\
+The speaker driver
+
